updates from master

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     </h1>
 <p>Master changes</p>
 <h2>fghfjg</h2>
-<p>Modification from master branch</p>
+
+<p>Modification from features branch</p>
+
+
+
+
 </body>
 
 </html>
