--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 <p>Master changes</p>
 <h2>fghfjg</h2>
 
-<<<<<<< HEAD
 <p>Modification from features branch</p>
-=======
->>>>>>> features
-
+hh
+gjehd
+jdekdj
+fjehk
+hfjj
+sadajjh
+bd
 
 
 
